# CRF

./: .codeclimate.yml  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md
libraries/ReflexxesMotionLibrary/: CMakeLists.txt
libraries/ReflexxesMotionLibrary/cmake/: DependenciesAndmplementations.cmake
libraries/ReflexxesMotionLibrary/include/: RMLInputParameters.h  RMLOutputParameters.h  RMLPositionInputParameters.h  RMLVelocityFlags.h  RMLVelocityInputParameters.h
libraries/Snap7/: CMakeLists.txt
libraries/Snap7/cmake/: DependenciesAndmplementations.cmake
libraries/Snap7/include/Snap7/: s7.hpp  snap7.hpp
libraries/Snap7/src/: s7.cpp  snap7.cpp
libraries/Snap7/src/libmain/: snap7_libmain.cpp
libraries/TRACInverseKinematics/: CMakeLists.txt
libraries/TRACInverseKinematics/cmake/: DependenciesAndmplementations.cmake
libraries/TRACInverseKinematics/include/TRACInverseKinematics/: nlopt_ik.hpp  trac_ik.hpp
libraries/TRACInverseKinematics/samples/: TrackIkTestSchunk.cpp
libraries/TRACInverseKinematics/src/: kdl_tl.cpp  nlopt_ik.cpp  trac_ik.cpp
libraries/TimeOptimalTrajectoryGenerator/: CMakeLists.txt
libraries/TimeOptimalTrajectoryGenerator/cmake/: DependenciesAndmplementations.cmake
libraries/TimeOptimalTrajectoryGenerator/include/TimeOptimalTrajectoryGenerator/: Path.hpp  TrajectoryHelper.hpp
libraries/TimeOptimalTrajectoryGenerator/src/: Path.cpp  TrajectoryHelper.cpp
modules/Actuators/CERNBot2/: CMakeLists.txt
modules/Actuators/CERNBot2/cmake/: DependenciesAndmplementations.cmake
modules/Actuators/CERNBot2/config/: cernBot2Config.json
modules/Actuators/CERNBot2/samples/: CERNBot2Sample.cpp
modules/Actuators/CERNBot2/src/: CERNBot2.cpp
modules/Actuators/CERNBot2/tests/: CERNBot2Tests.cpp  CMakeLists.txt
modules/Actuators/CHARMBot/: CMakeLists.txt
modules/Actuators/CHARMBot/cmake/: DependenciesAndmplementations.cmake
modules/Actuators/CHARMBot/config/: CHARMBot.json
modules/Actuators/CHARMBot/src/: CHARMBot.cpp
modules/Actuators/CHARMBot/tests/: CHARMBotTests.cpp  CMakeLists.txt
modules/Actuators/Dynamixel/: CMakeLists.txt  README.md
modules/Actuators/Dynamixel/config/: DXL-AX-12A.json  DXL-MX-28.json
modules/Actuators/Dynamixel/src/: Dynamixel.cpp  DynamixelConfiguration.cpp  DynamixelSDK.cpp
modules/Actuators/Dynamixel/tests/: CMakeLists.txt  DynamixelTests.cpp
modules/Actuators/EtherCATRobotArm/: CMakeLists.txt
modules/Actuators/EtherCATRobotArm/cmake/: DependenciesAndmplementations.cmake
modules/Actuators/EtherCATRobotArm/config/: EtherCATRobotArm.json
modules/Actuators/EtherCATRobotArm/samples/: EtherCATRobotArmSample.cpp
modules/Actuators/EtherCATRobotArm/src/: EtherCATRobotArm.cpp
modules/Actuators/EtherCATRobotArm/tests/: CMakeLists.txt  EtherCATRobotArmTests.cpp
modules/Actuators/Gripper/: CMakeLists.txt
modules/Actuators/Gripper/cmake/: DependenciesAndmplementations.cmake  ECBPMiSerialDependencies.cmake  SchunkGripperCANOpenDependencies.cmake
modules/Actuators/Gripper/docs/: ECBPMiSerial.md
modules/Actuators/Gripper/samples/: ECBPMiSerialSample.cpp  SchunkGripperCANOpenSample.cpp
modules/Actuators/Gripper/tests/: CMakeLists.txt  ECBPMiSerialTest.cpp
modules/Actuators/KinovaArm/: CMakeLists.txt
modules/Actuators/KinovaArm/cmake/: DependenciesAndmplementations.cmake
modules/Actuators/KinovaArm/config/: AdmittanceJaco2SW.json  KinovaGen2SW_01.json  KinovaJaco2CW.json  KinovaJaco2SW.json
modules/Actuators/KinovaArm/samples/: KinovaAdmittanceExample.cpp  KinovaArmExample.cpp
modules/Actuators/KinovaArm/src/: KinovaAdmittanceController.cpp  KinovaApiInterface.cpp  KinovaArmConfiguration.cpp  KinovaJaco.cpp
modules/Actuators/KinovaArm/tests/: CMakeLists.txt  KinovaAdmittanceControllerTests.cpp  KinovaArmConfigurationTests.cpp  KinovaJacoTests.cpp
modules/Actuators/LinearStage/: CMakeLists.txt
modules/Actuators/LinearStage/cmake/: CANOpenLinearStageDependencies.cmake  DependenciesAndmplementations.cmake  EtherCATLinearActuatorDependencies.cmake  LinearActuatorCommunicationPointDependencies.cmake
modules/Actuators/LinearStage/docs/: CANOpenLinearStage.md  LinearActuatorCommunicationPoint.md  LinearStage.md
modules/Actuators/LinearStage/src/: LinearStageConfiguration.cpp
modules/Actuators/LinearStage/tests/: CANOpenLinearStageTests.cpp  CMakeLists.txt  LinearActuatorCommunicationPointTests.cpp  LinearStageConfigurationTests.cpp
modules/Actuators/MechanicalStabilizer/: CMakeLists.txt
modules/Actuators/MechanicalStabilizer/cmake/: DependenciesAndmplementations.cmake  MechanicalStabilizerClientDependencies.cmake  MechanicalStabilizerCommunicationPointDependencies.cmake  TIMStabilizerDependencies.cmake
modules/Actuators/MechanicalStabilizer/include/: MechanicalStabilizerMock.hpp
modules/Actuators/MechanicalStabilizer/tests/: CMakeLists.txt  TIMStabilizerTests.cpp
modules/Actuators/PanTilt/: CMakeLists.txt
modules/Actuators/PanTilt/samples/: PanTilt.cpp
modules/Actuators/PanTilt/src/: DynamixelPanTilt.cpp
modules/Actuators/PanTilt/tests/: CMakeLists.txt  PanTiltTests.cpp  main.cpp
modules/Actuators/PilzArm/: CMakeLists.txt
modules/Actuators/PilzArm/cmake/: DependenciesAndmplementations.cmake
modules/Actuators/PilzArm/config/: PilzPRBT6.json
modules/Actuators/Robot/: CMakeLists.txt
modules/Actuators/RobotiqGripper/: CMakeLists.txt
modules/Actuators/RobotiqGripper140/: CMakeLists.txt
modules/Actuators/SPSRobot/: CMakeLists.txt
modules/Actuators/SRFCavityManager/: CMakeLists.txt
modules/Actuators/SchunkArm/: CMakeLists.txt
modules/Actuators/SchunkPowerCube/: CMakeLists.txt
modules/Actuators/Shielding/: CMakeLists.txt
modules/Actuators/TIM/: CMakeLists.txt
modules/Actuators/TIMArm/: CMakeLists.txt
modules/Actuators/TIMRPWagon/: CMakeLists.txt
modules/Actuators/Tools/: CMakeLists.txt
modules/Actuators/UniversalRobotDeprecated/: CMakeLists.txt
modules/Actuators/YoubotArm/: CMakeLists.txt
modules/Actuators/YoubotBase/: CMakeLists.txt  README  YouBot.cmake
modules/Applications/BLMTriggeringAnalysis/: CMakeLists.txt
(+2830 files in other folders)
